# yolop

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.agents/skills/maintenance/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/ship/: SKILL.md
.claude/: settings.json
.claude/hooks/: fix-git-identity.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  cli-binaries.yml  publish.yml  release.yml
docs/features/: hooks.md
scripts/: verify_crates_publish.py
skills/joke/: SKILL.md
skills/skill-management/: SKILL.md
skills/yolop-config/: SKILL.md
skills/yolop-hooks/: SKILL.md
specs/: acp.md  approval.md  btw.md  capabilities.md  commands.md  configuration.md  connectors.md  hooks.md  maintenance.md  mcp.md  memory.md  release.md  shipping.md  skills.md  tool-search.md  your.md
src/: agent_scenarios.rs  app.rs  approval.rs  capabilities.rs  capability_settings.rs  config_schema.rs  config_service.rs  diff.rs  hooks_config.rs  host_ui.rs  into.rs  main.rs  mcp_config.rs  mcp_e2e_tests.rs  runtime.rs  session_log.rs  settings.rs  streaming_tests.rs  test_env.rs  tools.rs  version.rs  your.rs
src/acp/: bridge.rs  mod.rs  protocol.rs  server.rs
src/app/: mod.rs  render.rs  setup.rs  transcript.rs
src/capabilities/: approval.rs  client_commands.rs  config.rs  hooks.rs  host.rs  memory.rs  mod.rs  model_discovery.rs  optional.rs  skills.rs  tool_search.rs  your.rs
src/connectors/: capability.rs  catalog.rs  mod.rs  resolver.rs  store.rs
tests/: integration.rs
tests/fixtures/: mcp_echo_server.py
tests/support/: mock_openai.rs  mod.rs  tui_harness.rs
