[package]
name = "yolop"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Yolop — a minimal terminal coding agent built on everruns-runtime"
homepage = "https://github.com/everruns/yolop"
repository = "https://github.com/everruns/yolop"
readme = "README.md"

[[bin]]
name = "yolop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
include_dir = "0.7"
ratatui = "0.30"
ratatui-textarea = "0.9.1"
serde_json = "1.0"
similar = "3"
toml = "1"
textwrap = "0.16"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

everruns-anthropic = "0.8.36"
everruns-core = "0.8.36"
everruns-openai = "0.8.36"
everruns-runtime = "0.8.36"
everruns-integrations-duckduckgo = "0.8.36"

[dev-dependencies]
portable-pty = "0.9.0"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
