[package]
name = "yolop"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Yolop — a terminal coding agent built on everruns-runtime"
homepage = "https://github.com/everruns/yolop"
repository = "https://github.com/everruns/yolop"
readme = "README.md"
# Demo media is for the GitHub README only; keep it out of the crate package.
exclude = ["/docs"]

[[bin]]
name = "yolop"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.14.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
include_dir = "0.7"
ratatui = "0.30"
# Already in the tree via the everruns driver crates; used directly only for
# the OpenAI-compatible `GET <base>/models` discovery fallback.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
ratatui-textarea = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
textwrap = "0.16"
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

everruns-anthropic = "0.12.0"
everruns-core = "0.12.0"
everruns-openai = "0.12.0"
# `mcp-stdio` lets yolop talk to local-process MCP servers; the hosted
# everruns server/worker never enable it (specs/mcp.md, upstream runtime-mcp.md D2).
everruns-runtime = { version = "0.12.0", features = ["mcp-stdio"] }
everruns-integrations-duckduckgo = "0.12.0"
everruns-integrations-daytona = "0.12.0"
futures = "0.3"

[dev-dependencies]
portable-pty = "0.9.0"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
